--- a/EjercicioDado/css/estilo.css
+++ b/EjercicioDado/css/estilo.css
@@ -1,10 +1,12 @@
 h1 {
     text-align: center;
     margin: 3vh;
+    margin-left: 70px;
 }
 .botonTirar {
     text-align: center;
     margin: 3vh;
+    margin-left: 120px;
 }
 .imagenDado {
     text-align: center;
@@ -12,4 +14,8 @@ h1 {
 }
 .row {
     margin: 3vh;
+}
+.dado{
+    width: 500;
+    text-align: center;
 }
